<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:background="@color/grey_line" />

        <app.com.foodcoupons.customviews.BoldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/filters"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <app.com.foodcoupons.customviews.RegularTextView
            android:id="@+id/txt_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/_10sdp"
            android:text="@string/clear_all"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:background="@color/grey_line"
            android:orientation="vertical">

            <app.com.foodcoupons.customviews.BoldTextView
                android:id="@+id/txt_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@color/colorPrimary"
                android:gravity="center|left"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/store"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_text" />

            <app.com.foodcoupons.customviews.BoldTextView
                android:id="@+id/txt_price"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/price"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey_text" />

            <app.com.foodcoupons.customviews.BoldTextView
                android:id="@+id/txt_cuisine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:text="@string/cuisine"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3ssp"
                app:cardUseCompatPadding="true">

                <app.com.foodcoupons.customviews.MaterialEditText
                    android:id="@+id/ed_search_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@drawable/grey_round_corner_stroke"
                    android:drawableLeft="@mipmap/ic_search"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="@string/search"
                    android:textSize="@dimen/_10ssp"
                    app:met_hideUnderline="true" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_store"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_cuisine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp">

        <app.com.foodcoupons.customviews.RegularTextView
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/grey_round_corner_stroke"
            android:padding="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/grey_text_dark"
            android:textSize="@dimen/_12ssp" />

        <app.com.foodcoupons.customviews.RegularTextView
            android:id="@+id/txt_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/app_color_corners_round"
            android:padding="@dimen/_10sdp"
            android:text="@string/apply"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</LinearLayout>