<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_7sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3ssp"
        app:cardUseCompatPadding="true">

        <app.com.foodcoupons.customviews.MaterialEditText
            android:id="@+id/ed_search_outlet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:drawableLeft="@mipmap/ic_search"
            android:drawablePadding="@dimen/_10sdp"
            android:focusableInTouchMode="false"
            android:hint="@string/search_a_deal"
            android:textSize="@dimen/_12ssp"
            app:met_hideUnderline="true" />

    </android.support.v7.widget.CardView>

    <!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <app.com.foodcoupons.customviews.SemiboldTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_offers"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10ssp" />

        <app.com.foodcoupons.customviews.RegularTextView
            android:id="@+id/txt_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/black_round_corner_stroke"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableRight="@mipmap/ic_filter_arrow"
            android:foreground="?selectableItemBackground"
            android:paddingBottom="@dimen/_3sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:text="@string/sort"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp" />

        <app.com.foodcoupons.customviews.RegularTextView
            android:id="@+id/txt_deals_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@drawable/black_round_corner_stroke"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableRight="@mipmap/ic_filter_arrow"
            android:foreground="?selectableItemBackground"
            android:paddingBottom="@dimen/_3sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:text="@string/filter"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_8ssp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_deal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp" />
    <!--</LinearLayout>-->
    <!--</android.support.v4.widget.NestedScrollView>-->
</LinearLayout>
