<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_home" />

        <app.com.foodcoupons.customviews.SemiboldTextView
            android:id="@+id/txt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_nearby"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_nearby" />

        <app.com.foodcoupons.customviews.SemiboldTextView
            android:id="@+id/txt_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/nearby"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_brochures"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_brochures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_brouchers" />

        <app.com.foodcoupons.customviews.SemiboldTextView
            android:id="@+id/txt_brochures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/brochures"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_profile" />

        <app.com.foodcoupons.customviews.SemiboldTextView
            android:id="@+id/txt_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/_9ssp" />

    </LinearLayout>


</LinearLayout>