<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical">

        <app.com.foodcoupons.customviews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/create_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <RelativeLayout
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/img_pink_solid"
            android:elevation="@dimen/_10sdp">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_user" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:layout_marginRight="@dimen/_3sdp"
                    android:elevation="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/img_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:paddingLeft="@dimen/_25sdp"
                    android:paddingTop="@dimen/_25sdp"
                    android:src="@mipmap/ic_plus_home"
                    android:visibility="visible" />
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/white"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <app.com.foodcoupons.customviews.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@color/light_grey_color"
                    android:textSize="@dimen/_12ssp" />

                <app.com.foodcoupons.customviews.MaterialEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/enter_your_name"
                    android:inputType="textCapWords|textVisiblePassword"
                    android:maxLength="@integer/max_name"
                    android:maxLines="1"
                    android:textSize="@dimen/_15sdp"
                    app:met_hideUnderline="true"
                    app:met_textColorHint="@color/grey_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/light_grey_color" />

                <app.com.foodcoupons.customviews.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/light_grey_color"
                    android:textSize="@dimen/_12ssp" />

                <app.com.foodcoupons.customviews.MaterialEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress|textVisiblePassword"
                    android:maxLength="@integer/max_email"
                    android:maxLines="1"
                    android:textSize="@dimen/_15sdp"
                    app:met_hideUnderline="true"
                    app:met_textColorHint="@color/grey_color" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_terms"
                android:layout_width="wrap_content"
                android:foreground="?selectableItemBackground"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_brand_btn" />

            <app.com.foodcoupons.customviews.LightTextView
                android:id="@+id/txt_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/by_creating_an_account_with_our_terms_of_use_amp_privacy_policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:src="@mipmap/ic_done" />

</RelativeLayout>
